http://inter-mediator.org/
=================================

Change Log will be supplied by English only.
Latest changes might exist on the GitHub repository.
Please check: https://github.com/INTER-Mediator/INTER-Mediator
Also the Migration Guide (Japanese) might be informative:
  http://inter-mediator.info/ja/for-developers/migration.html

Ver.5.10-dev (in development)


Ver.5.9 (January 29, 2019)
- Reduce error messages when using PHP 7.2 and DB_FileMaker_DataAPI class.
- [BUG FIX] Fix compatibility with PHP 5.6.40 (Thanks to Kenzo Nakata).
- [BUG FIX] Modify GenerateJSCode.php to fix compatibility with XAMPP for Windows.
- [BUG FIX] Fix showing images in FileMaker container fields with multibyte database name.
- [BUG FIX] If someone loges in after self-service enrollment, enrollment info in issued hash table was eliminated.
- [BUG FIX] Preserve the id attribute value of target nodes inside of THEAD or TFOOT elements in case of using Post Only mode.

Ver.5.8 (November 3, 2018)
- Improve speed performance of Native Authentication and LDAP Authentication.
- Add DB_FileMaker_DataAPI class to support FileMaker Data API of FileMaker Server 17.
- Support retrieving image files in container fields when using DB_FileMaker_DataAPI class.
- Support uploading files to container fields when using DB_FileMaker_DataAPI class.
- Update FMDataAPI.php (Ver.12) for FileMaker Data API.
- Add JSEncrypt <http://travistidwell.com/jsencrypt/> to "js_lib" directory in "lib" directory and
  remove "bi2php" from "lib" directory to improve speed performance of Native Authentication.
- The INTERMediator.recordLimit property is introduced to store the number of records. Also added methods:
  INTERMediator.setRecordLimit(cname, limit) and INTERMediator.clearRecordLimit(cname).
- THEAD/TFOOT of table can be set the linked node with calculation.
- Calculation to aggregate of same context as like "sum(mycontext@price)".
- Generate VM environment on a user of Linux by dist-docs/server-deploy.sh